resolve issue with play icon shifting

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -4953,7 +4953,6 @@ category: Components
   font-size: 1.25em;
   font-style: normal;
   font-weight: normal;
-  line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: auto;
@@ -5012,6 +5011,7 @@ category: Components
   position: absolute;
   top: 50%;
   left: 54%;
+  line-height: 1;
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -5052,7 +5052,10 @@ category: Components
   transition: 500ms;
   -webkit-transition-delay: 200ms;
   -moz-transition-delay: 200ms;
-  transition-delay: 200ms; }
+  transition-delay: 200ms;
+  border: none;
+  background: #d22228;
+  color: #000000; }
   .live-stream__player.audio__playing .live-stream__btn--play {
     display: block;
     position: absolute;
@@ -5094,6 +5097,8 @@ category: Components
     display: none; }
   .live-stream__btn--play.live-player__muted {
     display: none; }
+  .live-stream__btn--play.play-btn--heartbeat:before {
+    top: 52%; }
 
 .live-stream__btn--pause {
   display: none;
@@ -5123,16 +5128,19 @@ category: Components
   .live-stream__btn--pause.live-player__muted {
     display: none; }
 
-.live-stream__btn--resume.resume__audio, .live-stream__btn--resume.resume__live {
-  display: block;
-  position: absolute;
-  left: 0; }
-  @media screen and (min-width: 768px) {
-    .live-stream__btn--resume.resume__audio, .live-stream__btn--resume.resume__live {
-      position: relative;
-      left: auto; } }
-.live-stream__btn--resume.live-player__muted {
-  display: none; }
+.live-stream__btn--resume {
+  background: #d22228;
+  color: #000000; }
+  .live-stream__btn--resume.resume__audio, .live-stream__btn--resume.resume__live {
+    display: block;
+    position: absolute;
+    left: 0; }
+    @media screen and (min-width: 768px) {
+      .live-stream__btn--resume.resume__audio, .live-stream__btn--resume.resume__live {
+        position: relative;
+        left: auto; } }
+  .live-stream__btn--resume.live-player__muted {
+    display: none; }
 
 .live-stream--inactive {
   position: relative;
@@ -6035,14 +6043,9 @@ a.live-audio__link {
   -ms-animation: heartbeat 3000ms ease-out 0s infinite normal;
   -o-animation: heartbeat 3000ms ease-out 0s infinite normal;
   animation: heartbeat 3000ms ease-out 0s infinite normal;
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
   width: 56px;
   height: 56px;
-  background: #d22228;
-  border-radius: 50%;
-  color: #000000; }
+  border-radius: 50%; }
 
 .play-btn--heartbeat:after {
   content: ' ';
